feat: Integrate MinIO, optimize code structure, and support user profile picture updates.